logs/dag_id=transactions/run_id=manual__2023-09-10T131022.224416+0000/task_id=insert_into_songs/attempt=1.log
[2023-09-10T13:10:23.945+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: transactions.insert_into_songs manual__2023-09-10T13:10:22.224416+00:00 [queued]>
[2023-09-10T13:10:23.950+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: transactions.insert_into_songs manual__2023-09-10T13:10:22.224416+00:00 [queued]>
[2023-09-10T13:10:23.951+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 2
[2023-09-10T13:10:23.961+0000] {taskinstance.py:1382} INFO - Executing <Task(GenericTransfer): insert_into_songs> on 2023-09-10 13:10:22.224416+00:00
[2023-09-10T13:10:23.965+0000] {standard_task_runner.py:57} INFO - Started process 3948 to run task
[2023-09-10T13:10:23.967+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'transactions', 'insert_into_songs', 'manual__2023-09-10T13:10:22.224416+00:00', '--job-id', '98', '--raw', '--subdir', 'DAGS_FOLDER/transactions.py', '--cfg-path', '/tmp/tmp_l6t5osj']
[2023-09-10T13:10:23.969+0000] {standard_task_runner.py:85} INFO - Job 98: Subtask insert_into_songs
[2023-09-10T13:10:23.998+0000] {task_command.py:415} INFO - Running <TaskInstance: transactions.insert_into_songs manual__2023-09-10T13:10:22.224416+00:00 [running]> on host 80a7ead3f1b6
[2023-09-10T13:10:24.046+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Aditiya Rahman' AIRFLOW_CTX_DAG_ID='transactions' AIRFLOW_CTX_TASK_ID='insert_into_songs' AIRFLOW_CTX_EXECUTION_DATE='2023-09-10T13:10:22.224416+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-09-10T13:10:22.224416+00:00'
[2023-09-10T13:10:24.052+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-09-10T13:10:24.061+0000] {base.py:73} INFO - Using connection ID 'datawarehouse' for task execution.
[2023-09-10T13:10:24.061+0000] {generic_transfer.py:77} INFO - Extracting data from postgres
[2023-09-10T13:10:24.062+0000] {generic_transfer.py:78} INFO - Executing: 
 
SELECT a."TrackId",
       b."InvoiceId",
       d."CustomerId",
       b."InvoiceDate",
       b."Total",
       concat(c."FirstName", ' ', c."LastName"),
       d."Address",
       d."City",
       d."State",
       d."Country",
       d."PostalCode",
       d."Email",
FROM "Track" a 
JOIN "InvoiceLine" b
ON  a."TrackId" = b."TrackId"
JOIN "Invoice" c
ON  b."InvoiceId" = c."InvoiceId"
JOIN "Customer" d
ON c."CustomerId" = d."CustomerId"
[2023-09-10T13:10:24.065+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-09-10T13:10:24.067+0000] {sql.py:418} INFO - Running statement: 
SELECT a."TrackId",
       b."InvoiceId",
       d."CustomerId",
       b."InvoiceDate",
       b."Total",
       concat(c."FirstName", ' ', c."LastName"),
       d."Address",
       d."City",
       d."State",
       d."Country",
       d."PostalCode",
       d."Email",
FROM "Track" a 
JOIN "InvoiceLine" b
ON  a."TrackId" = b."TrackId"
JOIN "Invoice" c
ON  b."InvoiceId" = c."InvoiceId"
JOIN "Customer" d
ON c."CustomerId" = d."CustomerId", parameters: None
[2023-09-10T13:10:24.067+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/generic_transfer.py", line 86, in execute
    results = get_records(self.sql)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 255, in get_records
    return self.run(sql=sql, parameters=parameters, handler=fetch_all_handler)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "FROM"
LINE 14: FROM "Track" a 
         ^

[2023-09-10T13:10:24.072+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=transactions, task_id=insert_into_songs, execution_date=20230910T131022, start_date=20230910T131023, end_date=20230910T131024
[2023-09-10T13:10:24.081+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 98 for task insert_into_songs (syntax error at or near "FROM"
LINE 14: FROM "Track" a 
         ^
; 3948)
[2023-09-10T13:10:24.099+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-09-10T13:10:24.110+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
